--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>https://github.com/vovikbvi/airline.git</groupId>
-	<artifactId>parent-project</artifactId>
+	<artifactId>low-cost-airline</artifactId>
 	<version>1.0.0</version>
 
 	<packaging>pom</packaging>
