--- a/datamodel/pom.xml
+++ b/datamodel/pom.xml
@@ -10,5 +10,13 @@
 	</parent>
 
 	<artifactId>datamodel</artifactId>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.1-api</artifactId>
+		</dependency>
+	</dependencies>
+
 	
 </project>
