--- a/services/pom.xml
+++ b/services/pom.xml
@@ -11,4 +11,29 @@
 
 	<artifactId>services</artifactId>
 	
+	<dependencies>
+		<dependency>
+			<groupId>by.bogdevich.training.airline</groupId>
+			<artifactId>dataaccess</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+	</dependencies>
+
 </project>
