--- a/services/pom.xml
+++ b/services/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>services</artifactId>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>by.bogdevich.training.airline</groupId>
@@ -23,6 +23,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 		</dependency>
 		<dependency>
@@ -33,6 +38,10 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
 		</dependency>
 	</dependencies>
 
