--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
 				<artifactId>javax.inject</artifactId>
 				<version>1</version>
 			</dependency>
+
 			<!-- Spring framework -->
 			<dependency>
 				<groupId>org.springframework</groupId>
@@ -139,6 +140,8 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
+
+				<!-- for mail -->
 				<groupId>javax.mail</groupId>
 				<artifactId>mail</artifactId>
 				<version>1.4</version>
@@ -232,6 +235,12 @@
 				<version>${spring.version}</version>
 			</dependency>
 
+			<!-- for pdf -->
+			<dependency>
+				<groupId>com.itextpdf</groupId>
+				<artifactId>itextpdf</artifactId>
+				<version>5.0.6</version>
+			</dependency>
 
 
 
