--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,12 @@
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-entitymanager</artifactId>
 				<version>4.3.8.Final</version>
+			</dependency>
 
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-core</artifactId>
+				<version>4.3.8.Final</version>
 			</dependency>
 
 			<dependency>
@@ -170,7 +175,7 @@
 			</dependency>
 
 			<!-- WICKET DEPENDENCIES -->
-				<dependency>
+			<dependency>
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket-auth-roles</artifactId>
 				<version>${wicket.version}</version>
