--- a/datamodel/pom.xml
+++ b/datamodel/pom.xml
@@ -54,6 +54,11 @@
 			<artifactId>log4j-jcl</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>		
+		</dependency>
+
 
 	</dependencies>
 
